--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   🧥 White Collar<br>
   🪟 Vandalism<br>
   🎗 Domestic<br>
-  <br><img src="img/DUI.png" alt="DUI" style="width:16px;height:16px;vertical-align:middle; margin-right:4px;"> DUI<br>
+  <img src="img/DUI.png" alt="DUI" style="width:16px;height:16px;vertical-align:middle; margin-right:4px;"> DUI<br>
   🚫 Trespass<br>
   📣 Disturbance<br>
   🤜 Assault<br>
