--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   🚫 Trespass<br>
   📣 Disturbance<br>
   🤜 Assault<br>
-  <br>📍 All Other (Red Pin)
+  📍 All Other
 </div>
   <table id="data-table">
     <thead>
