--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +12,7 @@
     #legend {
       position: absolute;
       top: 10px;
-      right: 10px; 
+      right: 10px;
       z-index: 1001;
       background: white;
       padding: 10px;
@@ -37,21 +36,26 @@
 </head>
 <body>
   <div id="map"></div>
- <div id="legend">
-  <strong>Legend</strong><br>
-  🚓 Traffic Stop<br>
-  📞 911 Call<br>
-  🚨 Alarm<br>
-  🎭 Burglary<br>
-  🧥 White Collar<br>
-  🪟 Vandalism<br>
-  🎗 Domestic<br>
-  <img src="img/DUI.png" alt="DUI" style="width:16px;height:16px;vertical-align:middle; margin-right:4px;"> DUI<br>
-  🚫 Trespass<br>
-  📣 Disturbance<br>
-  🤜 Assault<br>
-  📍 All Other
-</div>
+
+  <div id="legend">
+    <strong>Legend</strong><br>
+    🚓 Traffic Stop<br>
+    📞 911 Call<br>
+    🚨 Alarm<br>
+    🎭 Burglary<br>
+    🧥 White Collar<br>
+    🪟 Vandalism<br>
+    🎗 Domestic<br>
+    <img src="img/DUI.png" alt="DUI" style="width:16px;height:16px;vertical-align:middle;"> DUI<br>
+    🚫 Trespass<br>
+    📣 Disturbance<br>
+    🤜 Assault<br>
+    🛑 Accident<br>
+    👁️ Check Welfare<br>
+    🙋 Citizen Assist<br>
+    📍 All Other
+  </div>
+
   <table id="data-table">
     <thead>
       <tr>
@@ -66,26 +70,23 @@
   </table>
 
   <script>
-function maskAddress(address) {
-  return address.replace(/\b(\d{1,5})(?=(-\d{1,5}))/g, (m) => {
-      // Mask the first number in a range (before the hyphen)
-      if (m.length === 5) return m.slice(0, 3) + 'XX';
-      if (m.length === 4) return m.slice(0, 2) + 'XX';
-      if (m.length === 3) return m.slice(0, 1) + 'XX';
-      return 'X'.repeat(m.length);
-    })
-    .replace(/\b(\d{5})(?=\s)/g, (m) => m.slice(0, 3) + 'XX')
-    .replace(/\b(\d{4})(?=\s)/g, (m) => m.slice(0, 2) + 'XX')
-    .replace(/\b(\d{3})(?=\s)/g, (m) => m.slice(0, 1) + 'XX')
-    .replace(/\b(\d{2})(?=\s)/g, 'XX')
-    .replace(/\b(\d{1})(?=\s)/g, 'X');
-}
-
+    function maskAddress(address) {
+      return address.replace(/\b(\d{1,5})(?=(-\d{1,5}))/g, (m) => {
+          if (m.length === 5) return m.slice(0, 3) + 'XX';
+          if (m.length === 4) return m.slice(0, 2) + 'XX';
+          if (m.length === 3) return m.slice(0, 1) + 'XX';
+          return 'X'.repeat(m.length);
+        })
+        .replace(/\b(\d{5})(?=\s)/g, (m) => m.slice(0, 3) + 'XX')
+        .replace(/\b(\d{4})(?=\s)/g, (m) => m.slice(0, 2) + 'XX')
+        .replace(/\b(\d{3})(?=\s)/g, (m) => m.slice(0, 1) + 'XX')
+        .replace(/\b(\d{2})(?=\s)/g, 'XX')
+        .replace(/\b(\d{1})(?=\s)/g, 'X');
+    }
 
     function getIcon(problem) {
-      if (/A.D.W./i.test(problem)) return "🤜";
-      if (/assault/i.test(problem)) return "🤜";
-      if (/traffic stop/i.test(problem)) return "🚓";
+      if (/A\.D\.W\.|assault/i.test(problem)) return "🤜";
+      if (/traffic stop|traffic arrest/i.test(problem)) return "🚓";
       if (/911/i.test(problem)) return "📞";
       if (/alarm/i.test(problem)) return "🚨";
       if (/burglary/i.test(problem)) return "🎭";
@@ -95,6 +96,9 @@ function maskAddress(address) {
       if (/drunk|dui/i.test(problem)) return "<img src='img/DUI.png' alt='DUI' style='width:24px;height:24px;'>";
       if (/trespass/i.test(problem)) return "🚫";
       if (/disturb/i.test(problem)) return "📣";
+      if (/accident/i.test(problem)) return "🛑";
+      if (/check.*welfare/i.test(problem)) return "👁️";
+      if (/citizen.*assist/i.test(problem)) return "🙋";
       return "📍";
     }
 
@@ -108,76 +112,66 @@ function maskAddress(address) {
     }).addTo(map);
 
   fetch('CadCalls.json?_=' + new Date().getTime())
+  .then(response => response.json())
+  .then(calls => {
+    const tbody = document.querySelector('#data-table tbody');
+    const now = new Date();
+    const threeHoursAgo = new Date(now.getTime() - 3 * 60 * 60 * 1000);
+    const thirtyMinutesAgo = new Date(now.getTime() - 30 * 60 * 1000);
 
-      .then(response => response.json())
-      .then(calls => {
-  const tbody = document.querySelector('#data-table tbody');
-  const now = new Date();
-  const threeHoursAgo = new Date(now.getTime() - 3 * 60 * 60 * 1000);
-  const thirtyMinutesAgo = new Date(now.getTime() - 30 * 60 * 1000);
+    calls
+      .sort((a, b) => new Date(b.ResponseDate) - new Date(a.ResponseDate))
+      .forEach(call => {
+        const callTime = new Date(call.ResponseDate);
+        const disposition = (call.Disposition || "").toLowerCase();
+        const problem = (call.Problem || "").toLowerCase();
+        const maskedAddress = maskAddress(call.Address || "");
 
-  const markerMap = new Map(); // Store markers by incident number
+        // Table: show ALL records except z-call
+        if (!disposition.includes("z-call not entered in cad")) {
+          const row = document.createElement('tr');
+          row.innerHTML = `
+            <td>${call.IncidentNumber}</td>
+            <td>${new Date(call.ResponseDate).toLocaleString()}</td>
+            <td>${call.Problem}</td>
+            <td>${maskedAddress}</td>
+            <td>${call.Disposition}</td>
+          `;
+          tbody.appendChild(row);
+        }
 
-  calls
-    .filter(call => {
-      const callTime = new Date(call.ResponseDate);
-      const disposition = (call.Disposition || "").toLowerCase();
-      const problem = (call.Problem || "").toLowerCase();
+        // Map: show recent (3hr) calls only, filter same way as before
+        if (
+          callTime >= threeHoursAgo &&
+          callTime <= now &&
+          !disposition.includes("z-call not entered in cad") &&
+          !( /traffic stop|traffic arrest/.test(problem) && callTime > thirtyMinutesAgo )
+        ) {
+          const iconContent = getIcon(call.Problem || "");
+          const icon = L.divIcon({
+            className: 'custom-icon',
+            html: `<div style="font-size: 22px;">${iconContent}</div>`
+          });
 
-      if (callTime < threeHoursAgo || callTime > now || disposition.includes("z-call not entered in cad")) {
-        return false;
-      }
+          const marker = L.marker([call.Latitude, call.Longitude], { icon }).addTo(map);
+          marker.bindPopup(`
+            <div style="font-size: 16px;">
+              <b>${new Date(call.ResponseDate).toLocaleString()}</b><br>
+              ${call.Problem}<br>
+              ${maskedAddress}<br>
+              ${call.Disposition}<br>
+              ${call.IncidentNumber}
+            </div>
+          `);
 
-      if ((/traffic stop|traffic arrest/.test(problem)) && callTime > thirtyMinutesAgo) {
-        return false;
-      }
-
-      return true;
-    })
-    .sort((a, b) => new Date(b.ResponseDate) - new Date(a.ResponseDate))
-    .forEach(call => {
-      const maskedAddress = maskAddress(call.Address || "");
-      const icon = L.divIcon({
-        className: 'custom-icon',
-        html: `<div style="font-size: 24px;">${getIcon(call.Problem || "")}</div>`
+          row.onclick = () => {
+            map.setView([call.Latitude, call.Longitude], 15);
+            marker.openPopup();
+          };
+        }
       });
-
-      const marker = L.marker([call.Latitude, call.Longitude], { icon }).addTo(map);
-      const popupContent = `
-        <div style="font-size: 16px;">
-          <b>${new Date(call.ResponseDate).toLocaleString()}</b><br>
-          ${call.Problem}<br>
-          ${maskedAddress}<br>
-          ${call.Disposition}<br>
-          ${call.IncidentNumber}
-        </div>
-      `;
-      marker.bindPopup(popupContent);
-
-      markerMap.set(call.IncidentNumber, marker); // Store for later reference
-
-      const row = document.createElement('tr');
-      row.innerHTML = `
-        <td>${call.IncidentNumber}</td>
-        <td>${new Date(call.ResponseDate).toLocaleString()}</td>
-        <td>${call.Problem}</td>
-        <td>${maskedAddress}</td>
-        <td>${call.Disposition}</td>
-      `;
-
-      row.onclick = () => {
-        map.setView([call.Latitude, call.Longitude], 15);
-        marker.openPopup(); // Show popup
-      };
-
-      tbody.appendChild(row);
-    });
-});
+  });
 
   </script>
 </body>
 </html>
-
-
-
-
