--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 
   <div id="legend">
   <strong>Legend</strong><br>
-  <img src="img/red.png"   style="height: 20px; vertical-align: middle;"> Assault / Domestic / Accident<br>
-  <img src="img/blue.png"  style="height: 20px; vertical-align: middle;"> Traffic / Check Welfare<br>
-  <img src="img/orange.png" style="height: 20px; vertical-align: middle;"> 911 / Disturbance<br>
-  <img src="img/yellow.png" style="height: 20px; vertical-align: middle;"> Alarm<br>
-  <img src="img/green.png" style="height: 20px; vertical-align: middle;"> Vandalism / Citizen Assist<br>
-  <img src="img/purple.png" style="height: 20px; vertical-align: middle;"> DUI / Burglary<br>
-  <img src="img/grey.png"  style="height: 20px; vertical-align: middle;"> White Collar / Other
+  <img src="img/marker-icon-blue.png"   style="height: 20px; vertical-align: middle;"> Assault / Domestic / Accident<br>
+  <img src="img/marker-icon-blue.png"  style="height: 20px; vertical-align: middle;"> Traffic / Check Welfare<br>
+  <img src="img/marker-icon-orange.png" style="height: 20px; vertical-align: middle;"> 911 / Disturbance<br>
+  <img src="img/marker-icon-yellow.png" style="height: 20px; vertical-align: middle;"> Alarm<br>
+  <img src="img/marker-icon-green.png" style="height: 20px; vertical-align: middle;"> Vandalism / Citizen Assist<br>
+  <img src="img/marker-icon-violet.png" style="height: 20px; vertical-align: middle;"> DUI / Burglary<br>
+  <img src="img/marker-icon-grey.png"  style="height: 20px; vertical-align: middle;"> White Collar / Other
 </div>
 
   <table id="data-table">
