--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
      <img src="img/Blue.png"   style="height: 20px; vertical-align: middle;"> Accident<br>
   <img src="img/Red.png"  style="height: 20px; vertical-align: middle;"> Traffic<br>
   <img src="img/Black.png"  style="height: 20px; vertical-align: middle;"> Check Welfare<br>
-  <img src="img/Magenta.png" style="height: 20px; vertical-align: middle;"> 911<br>
+  <img src="img/Maroon.png" style="height: 20px; vertical-align: middle;"> 911<br>
       <img src="img/Orange.png" style="height: 20px; vertical-align: middle;"> Disturbance<br>
   <img src="img/DGreen.png" style="height: 20px; vertical-align: middle;"> Alarm<br>
   <img src="img/Aqua.png" style="height: 20px; vertical-align: middle;"> Vandalism<br>
