--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ function getMarkerIcon(problem) {
   if (/accident/i.test(problem)) return 'Blue';
   if (/traffic stop|traffic arrest/i.test(problem)) return 'Red';
   if (/check the welfare/i.test(problem)) return 'Black';
-  if (/911/i.test(problem)) return 'Magenta';
+  if (/911/i.test(problem)) return 'Marron';
   if (/disturb/i.test(problem)) return 'Orange';
   if (/alarm/i.test(problem)) return 'DGreen';
   if (/vandalism/i.test(problem)) return 'Aqua';
