--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   <strong>Legend</strong><br>
   <img src="img/Pink.png"   style="height: 20px; vertical-align: middle;"> Assault<br>
     <img src="img/LBlue.png"   style="height: 20px; vertical-align: middle;"> Domestic<br>
-     <img src="img/Blue.png"   style="height: 20px; vertical-align: middle;"> Accident<br>
-  <img src="img/Red.png"  style="height: 20px; vertical-align: middle;"> Traffic<br>
+     <img src="img/Blue.png"   style="height: 20px; vertical-align: middle;"> Traffic Accident<br>
+  <img src="img/Red.png"  style="height: 20px; vertical-align: middle;"> Traffic Stop/Arrest<br>
   <img src="img/Black.png"  style="height: 20px; vertical-align: middle;"> Check Welfare<br>
   <img src="img/Marron.png" style="height: 20px; vertical-align: middle;"> 911<br>
       <img src="img/Orange.png" style="height: 20px; vertical-align: middle;"> Disturbance<br>
